clean and effective commit message  for code improvements

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGO_URL=mongodb+srv://Ishan:XiCDWBp1kd1n8iyE@atlascluster.exrighh.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET=thisIsYourSecretKey123!
