--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
     "@mui/material": "^6.2.1",
     "@reduxjs/toolkit": "^2.5.0",
     "cra-template": "1.2.0",
+    "date-fns": "^3.0.0",
     "react": "^19.0.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-date-range": "^2.0.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
